# ai-engineer-assessment

./: .gitignore  .mise.toml  Experiments.md  README.md
backend/: Exploration.ipynb  database.py  main.py  mapbox_client.py  models.py  orm_models.py  pyproject.toml  requirements.txt  similarity.py
backend/src/backend/: extractors.py  gliner_similarity.py  main.py  mapbox_client.py  orm_models.py  similarity.py
data/: addresses.csv
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AddressModal.tsx  AddressTable.tsx
