[project]
name = "backend"
version = "1.0.0"
description = "Minimal backend for the Root Sustainability AI/ML Engineer assessment."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "python-dotenv>=0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
