[project]
name = "backend"
version = "1.0.0"
description = "Minimal backend for the Root Sustainability AI/ML Engineer assessment."
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "python-dotenv>=0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "tqdm>=4.67.1",
    "gliner2>=1.1.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "chardet>=5.2.0",
    "fsner>=0.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "ruff>=0.14.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
]
